--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -71,19 +71,20 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  /* border: 1px solid black; */
 }
 
-html,
+/* html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
+} */
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -95,7 +96,7 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-a {
+/* a {
   color: inherit;
   text-decoration: none;
 }
@@ -104,4 +105,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
