--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,108 +1,91 @@
-/* :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+@font-face {
+  font-family: "Inter";
+  src: url('../../public/fonts/inter/static/Inter-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@font-face {
+  font-family: "Inter";
+  src: url('../../public/fonts/inter/static/Inter-Bold.ttf');
+  font-weight: bold;
+  font-style: normal;
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-} */
+:root {
+  --mobile-card-width: 87%;
+  --breakpoint-tablet: 768px;
+  --breakpoint-mobile: 375px;
+  --breakpoint-desktop: 1440px;
+}
 
 * {
-  box-sizing: border-box;
-  padding: 0;
+  /* font-family: "Space Mono", monospace; */
   margin: 0;
-  /* border: 1px solid black; */
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 13px;
 }
 
-/* html,
+
+
+body[data-theme="light"] {
+  --color-bg-theme-switch: #979797;
+  --color-divider: #E9E9E9;
+  --color-text-primary: #2d2d2d;
+  --color-bg-main: #FFF;
+  --color-bg-search: #f4f4f4;
+  --color-input-outline: #A445ED;
+
+  /* --search-button-color: #0079ff;
+  --color-text-profile-name: #4b6a9b;
+  --color-text-profile-username: #0079ff;
+  --color-text-profile-joined: #697c9a;
+  --color-text-profile-bio: #4b6a9b;
+  --color-text-profile-stats1: #4b6a9b;
+  --color-text-profile-stats2: #2b3442;
+  --color-text-profile-joined: #697c9a;
+  --color-text-profile-links: #4b6a9b;
+  --color-text-search: #4b6a9b;
+  --color-text-theme: #697c9a;
+  --color-text-title: #2b3442;
+  --color-bg-main: #f6f8ff;
+  --color-bg-card: #fefefe;
+  --color-bg-toggle: #697c9a; */
+}
+
+body[data-theme="dark"] {
+  --color-bg-theme-switch: #A445ED;
+  --color-divider: #E9E9E9;
+  --color-text-primary: #FFF;
+  --color-bg-main: #050505;
+  --color-bg-search: #1f1f1f;
+  --color-input-outline: #A445ED;
+
+  /* --search-button-color: #0079ff;
+  --color-text-profile-name: #ffffff;
+  --color-text-profile-username: #0079ff;
+  --color-text-profile-joined: #ffffff;
+  --color-text-profile-bio: #ffffff;
+  --color-text-profile-stats1: #ffffff;
+  --color-text-profile-stats2: #ffffff;
+  --color-text-profile-joined: #ffffff;
+  --color-text-profile-links: #ffffff;
+  --color-text-search: #ffffff;
+  --color-text-theme: #ffffff;
+  --color-bg-main: #141d2f;
+  --color-bg-card: #1e2a47;
+  --color-bg-toggle: #ffffff; */
+}
+
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-} */
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--color-bg-main);
 }
 
-/* a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+/* input {
+  outline: none;
 } */
+input:focus {
+  outline: 1px solid var(--color-input-outline);
+}
