--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,43 +1,107 @@
 .main {
-  border: 2px solid pink;
   min-height: 100vh;
   display: flex;
   justify-content: center;
-  // padding: 6rem;
   padding: 24px;
 }
 
 .header {
-  height: 32px;
-  border: 1px solid blue;
   display: flex;
   justify-content: center;
   align-items: center;
   &__inner {
-    border: 1px solid blue;
     height: 32px;
     width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    > div:nth-child(2) {
+      display: flex;
+      gap: 16px;
+      align-items: center;
+      height: 100%;
+    }
   }
-  &__switch {
+  &__divider {
+    border-right: 1px solid var(--color-divider);
+    height: 100%;
+  }
+  &__type {
+    // border: 1px solid pink;
+    position: relative;
+    display: flex;
+    align-items: center;
+    font-family: "Inter", sans-serif;
+    font-weight: bold;
+    gap: 16px;
+    color: var(--color-text-primary);
+    height: 100%;
+  }
+  &__type__dropdown {
+    position: absolute;
+    background-color: var(--color-bg-main);
+    // border: 2px solid red;
+    // height: 152px;
+    width: 150%;
+    padding: 1.3em;
+    list-style-type: none;
+    top: 38px;
+    right: 0;
+    border-radius: 16px;
+    box-shadow: 0 3px 10px var(--color-bg-theme-switch);
+    display: flex;
+    flex-direction: column;
+    gap: 0.8em;
+    z-index: 2;
+    &_shadow {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      // border: 2px solid red;
+    }
+  }
+  &__theme {
+    display: flex;
+    gap: 12px;
+  }
+  &__theme_icon {
+    svg path {
+      stroke: var(--color-bg-theme-switch);
+    }
+  }
+
+  &__theme_switch {
+    position: relative;
     width: 40px;
     height: 20px;
-    background-color: #979797;
+    background-color: var(--color-bg-theme-switch);
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  &__circle {
+  &__theme_circle {
     width: 14px;
     height: 14px;
     border-radius: 50%;
     background-color: #fff;
+    &__light {
+      transform: translateX(-60%);
+      transition: transform 0.1s;
+    }
+    &__dark {
+      transform: translateX(60%);
+      transition: transform 0.1s;
+    }
   }
-  &__circle--light {
 
+  &__theme_icon {
+  }
+
+  &__circle--light {
   }
   &__circle--dark {
-
   }
 }
