--- a/src/components/search.module.scss
+++ b/src/components/search.module.scss
@@ -1,4 +1,30 @@
 .container {
-  border: 1px solid blue;
+  // border: 1px solid blue;
+  position: relative;
   height: 48px;
+  input {
+    border: none;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-bg-search);
+    border-radius: 16px;
+    padding: 0.9em 1.5em;
+    color: var(--color-text-primary);
+    // &:focus {
+    // }
+  }
+
+  i {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    img {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      margin: auto 1.5em auto 0;
+    }
+  }
 }
