--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -3,6 +3,18 @@
   display: flex;
   justify-content: center;
   padding: 24px;
+  &__serif {
+    font-family: Lora;
+    font-weight: bold;
+  }
+  &__sansserif {
+    font-family: Inter;
+    font-weight: bold;
+  }
+  &__mono {
+    font-family: Inconsolata;
+    font-weight: bold;
+  }
 }
 
 .header {
@@ -42,7 +54,7 @@
     background-color: var(--color-bg-main);
     // border: 2px solid red;
     // height: 152px;
-    width: 150%;
+    min-width: 100px;
     padding: 1.3em;
     list-style-type: none;
     top: 38px;
@@ -60,6 +72,21 @@
       left: 0;
       right: 0;
       // border: 2px solid red;
+    }
+    li {
+      white-space: nowrap;
+    }
+    &_serif {
+      font-family: Lora;
+      font-weight: bold;
+    }
+    &_sansserif {
+      font-family: Inter;
+      font-weight: bold;
+    }
+    &_mono {
+      font-family: Inconsolata;
+      font-weight: bold;
     }
   }
   &__theme {
