--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -76,15 +76,15 @@
     li {
       white-space: nowrap;
     }
-    &_serif {
+    &__serif {
       font-family: Lora;
       font-weight: bold;
     }
-    &_sansserif {
+    &__sansserif {
       font-family: Inter;
       font-weight: bold;
     }
-    &_mono {
+    &__mono {
       font-family: Inconsolata;
       font-weight: bold;
     }
